# my_restaurant_robot

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: view_bot.rviz
description/: gazebo_control.xacro  robot_core.xacro
launch/: gazebo.launch.py  rsp.launch.py
src/hclidar_driver_ros2/: README.md
src/hclidar_driver_ros2/launch/: hclidar_launch.py  hclidar_launch_rviz.py
src/hclidar_driver_ros2/src/: hclidar_driver_ros2_node.cpp
src/hclidar_driver_ros2/src/base/: hclidar.cpp
src/restaurant_robot_bringup/: package.xml  setup.cfg  setup.py
src/restaurant_robot_bringup/config/: nav2_params.yaml  slam_toolbox_params.yaml
src/restaurant_robot_bringup/launch/: bringup.launch.py  navigation.launch.py  rviz2_remote.launch.py
src/restaurant_robot_bringup/restaurant_robot_bringup/: stm32_bridge.py
src/restaurant_robot_description/: CMakeLists.txt  README.md  package.xml
src/restaurant_robot_description/config/: view_bot.rviz
src/restaurant_robot_description/launch/: gazebo.launch.py  nav2_sim.launch.py  rsp.launch.py  sim.launch.py
src/restaurant_robot_description/meshes/3d_print/: caster_wheel.stl  chassis.stl  chassis_frame.scad  chassis_lid.stl  chassis_tray.stl  drive_wheel.stl  lidar_base.stl  lidar_head.stl  prototype_base.stl  prototype_base_v2.stl  prototype_bumper.stl  prototype_frame.scad  prototype_frame.stl  prototype_top.stl  robot_assembly_preview.stl  viewer.html
src/restaurant_robot_description/rviz/: robot_view.rviz
src/restaurant_robot_description/scripts/: generate_stl.py  preview_chassis.py
src/restaurant_robot_description/urdf/: gazebo.xacro  inertia_macros.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  sensors.xacro
src/restaurant_robot_description/worlds/: empty_with_sensors.sdf  obs.sdf  restaurant_world.sdf
src/restaurant_robot_localization/: CMakeLists.txt  package.xml
src/restaurant_robot_navigation/: CMakeLists.txt  package.xml
src/restaurant_robot_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml
src/restaurant_robot_navigation/launch/: nav2.launch.py
src/restaurant_robot_navigation/maps/: restaurant_map.pgm  restaurant_map.yaml
src/restaurant_robot_navigation/restaurant_robot_navigation/: auto_mapper.py  figure_eight.py
worlds/: empty.world
